--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -17,3 +17,8 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
+          plugin_languages: yes
+          plugin_languages_details: bytes-size, percentage
+          plugin_languages_skipped: yindaheng98/yindaheng98.github.io
+          plugin_languages_ignored: html, css, tex, Jupyter%20Notebook
+          commits_authoring: yindaheng98@gmail.com,yindaheng98@163.com,770275298@qq.com
