--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -17,6 +17,7 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
+          base: header, activity, repositories
           plugin_languages: yes
           plugin_languages_details: bytes-size, percentage
           plugin_languages_skipped: yindaheng98/yindaheng98.github.io
