--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           token: ${{ secrets.METRICS_TOKEN }}
           base: header, activity, repositories
+          repositories_forks: yes
           plugin_languages: yes
           plugin_languages_details: bytes-size, percentage
           plugin_languages_skipped: yindaheng98/yindaheng98.github.io
