--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -19,6 +19,8 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           base: header, activity, repositories
           repositories_forks: yes
+          plugin_lines: yes
+          plugin_lines_skipped: yindaheng98/yindaheng98.github.io
           plugin_languages: yes
           plugin_languages_details: bytes-size, percentage
           plugin_languages_skipped: yindaheng98/yindaheng98.github.io
