--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -21,6 +21,7 @@ jobs:
           repositories_forks: yes
           plugin_lines: yes
           plugin_lines_skipped: yindaheng98/yindaheng98.github.io
+          plugin_traffic: yes
           plugin_languages: yes
           plugin_languages_details: bytes-size, percentage
           plugin_languages_skipped: yindaheng98/yindaheng98.github.io
