--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -24,8 +24,8 @@ jobs:
           plugin_traffic: yes
           plugin_languages: yes
           plugin_languages_details: bytes-size, percentage
-          plugin_languages_skipped: yindaheng98/yindaheng98.github.io
-          plugin_languages_ignored: html, css, tex, Jupyter%20Notebook
+          plugin_languages_skipped: yindaheng98/yindaheng98.github.io,yindaheng98/TheCalendars,yindaheng98/LittleProgramSet
+          plugin_languages_ignored: html,css,tex,Jupyter%20Notebook
           commits_authoring: yindaheng98@gmail.com,yindaheng98@163.com,770275298@qq.com
           plugin_followup: yes
           plugin_followup_sections: user
